# learning-agentic-ai

./: .pylintrc  FAIL_LOG.md  LEARNINGS.md  config.py  factory.py  hello.py  inputs.py  llm.py  pyproject.toml  requirements.txt
day1/: classify.py  cost.py  determinism.py  extract.py
day2/: extract_robust.py  langchain_parser.ipynb  single_tool.py
day3/: corpus.py  embeddings.py
day4/: store.py
day4/rag_pipeline/: cli.py  factory.py  helpers.py  ingest.py  orchestrate.py  prompts.py  retriever.py
day5/: main.py  schema.py  utils.py
day5/chains/: answer.py  decompoose.py  hyde.py  math.py  planner.py  smalltalk.py  step_back.py
day5/orchestrator/: switchboard.py
day5/prompts/: answer.py  decompose.py  hyde.py  math.py  planner.py  smalltalk.py  step_back.py
day5/retrieval/: hyde_search.py  indexer.py  retriever.py
day5/tests/: test_switchboard.py
notebooks/: hybridSearch.ipynb  textToSql.ipynb  warehouse.db
prompt-eng-interactive-tutorial/Anthropic 1P/: 00_Tutorial_How-To.ipynb  01_Basic_Prompt_Structure.ipynb  02_Being_Clear_and_Direct.ipynb  03_Assigning_Roles_Role_Prompting.ipynb  04_Separating_Data_and_Instructions.ipynb  05_Formatting_Output_and_Speaking_for_Claude.ipynb  06_Precognition_Thinking_Step_by_Step.ipynb  07_Using_Examples_Few-Shot_Prompting.ipynb  08_Avoiding_Hallucinations.ipynb
providers/: embeddings.py  llm.py
python/: async_calls.py  async_fetcher.py  basics.py  pydantic_refresher.py  request.py
reranking/: corpus.py  main.py  pipeline.py  providers.py
reranking/retrieval/: base_retriever.py  compressor.py  reranker.py
