[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.115.0",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
]
